[package]
name = "robot-bin"
version = "0.1.3"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]
readme = "README.md"

[dependencies]
pm1-sdk = { path = "../pm1-sdk-3" }
lidar-ld19 = { path = "../lidar-ld19" }
rtk-qxwz = { path = "../rtk-qxwz" }
gnss = { path = "../gnss" }
pose-filter = { path = "../pose-filter" }
path-tracking = { path = "../path-tracking" }
steering = { path = "../steering" }

async-std = { version = "*", features = ["unstable"] }
futures = { version = "*", default-features = false, features = [
    "async-await", # 只要个 join!
] }
parry2d = { version = "*", features = ["simd-stable"] }
lazy_static = "*"

monitor-tool = { path = "../monitor-tool-rs", optional = true, default-features = false }

[features]
default = ["runtime", "display"]
runtime = ["steering/xbox360"]
display = ["monitor-tool/sender"]
